--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @import "styles/Header.css";
 @import "styles/Footer.css";
 @import "~antd/dist/antd.css";
+@import "styles/Main.css";
+@import "styles/SatSetting.css";
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
